--- a/FinPlan.Web/Components/Layout/MainLayout.razor
+++ b/FinPlan.Web/Components/Layout/MainLayout.razor
@@ -165,7 +165,7 @@
         <div class="feedback-links">
             <NavLink class="btn btn-sm btn-outline-primary" href="/cost-of-living-survey">Cost of Living Survey</NavLink>
             <NavLink class="btn btn-sm btn-outline-primary" href="/wealth-journey-survey">Wealth Journey Survey</NavLink>
-            <NavLink class="btn btn-sm btn-outline-primary" href="/retirement-feedback-simple">Retirement Drawdown Survey</NavLink>
+            <NavLink class="btn btn-sm btn-outline-primary" href="/sample-survey">Simple Survey</NavLink>
         </div>
     </div>
 </div>
