--- a/FinPlan.Web/Pages/Feedback/CostOfLivingFeedBack.razor
+++ b/FinPlan.Web/Pages/Feedback/CostOfLivingFeedBack.razor
@@ -1,4 +1,4 @@
-﻿@page "/cost-of-living-survey"
+﻿@page "/cost-of-living-survey-old"
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Components.Forms
 
