--- a/FinPlan.Web/Pages/Feedback/WealthJourneyFeedback.razor
+++ b/FinPlan.Web/Pages/Feedback/WealthJourneyFeedback.razor
@@ -1,4 +1,4 @@
-@page "/wealth-journey-survey"
+@page "/wealth-journey-survey-old"
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Components.Forms
 
