--- a/FinPlan.Web/Pages/CostOfLivingPlanner.razor
+++ b/FinPlan.Web/Pages/CostOfLivingPlanner.razor
@@ -317,7 +317,8 @@
 
 <nav class="right-sidebar" aria-label="Right menu">
     <ul class="list-unstyled mb-0">
-        <li><a class="sidebar-link" href="/guides/how-to-use-cost-of-living-calculator"><i class="bi bi-graph-up"></i> How to use this calculator</a></li>
+        <li><a class="sidebar-link" href="/guides/how-to-use-cost-of-living-calculator"><i class="bi bi-graph-up"></i> How to use this planner</a></li>
+        <li><a class="sidebar-link" href="/cost-of-living/2025-bangalore-2BHK">Cost of Living - Bangalore</a></li>
         @* <li><a class="sidebar-link" href="/retirement-fire"><i class="bi bi-wallet2"></i> Retirement</a></li>
         <li><a class="sidebar-link" href="/wealth-journey"><i class="bi bi-graph-up"></i> Wealth Journey</a></li>
         <li><a class="sidebar-link" href="/privacy-policy"><i class="bi bi-file-earmark-text"></i> Privacy</a></li> *@
